--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+.header {
+    padding: 100px 0;
+    font-size: 48px;
+    font-weight: 700;
+    color: beige;
+    font-family: sans-serif;
+    background-color: darkseagreen;
+    text-align: center;
+}
 .main {
     padding: 100px;
     text-align: center;
@@ -7,13 +16,37 @@
     text-align: center;
     background-color: goldenrod;
 }
-
-.header {
+.footer{
+    position: relative;
     padding: 100px 0;
+    width: 100%;
+    height: 100%;
     font-size: 48px;
     font-weight: 700;
-    color: beige;
+    color: rgb(248, 134, 68);
     font-family: sans-serif;
-    background-color: darkseagreen;
     text-align: center;
+    background: rgba(233, 177, 225, 0.589);
+    overflow: hidden;
+    z-index: -1;
+}
+.footer_title{
+    text-shadow: 6px 6px 12px rgba(152, 90, 154, 1);
+}
+.footer__img-wrap{
+    content:'';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    height: 300px;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+.footer__img-wrap img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    border:3px solid rgb(123, 88, 218);
 }
